day giao dien trang chu

--- a/product-category/pages/bill/bill.html
+++ b/product-category/pages/bill/bill.html
@@ -40,7 +40,7 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a class="brand-link" href="index3.html">
+        <a class="brand-link" href="/case4_FE/product-category/index.html">
             <img alt="AdminLTE Logo" class="brand-image img-circle elevation-3" src="../../dist/img/AdminLTELogo.png"
                  style="opacity: .8">
             <span class="brand-text font-weight-light">AdminLTE 3</span>
