--- a/product-category/index.html
+++ b/product-category/index.html
@@ -40,12 +40,6 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a class="brand-link" href="index3.html">
-            <img alt="AdminLTE Logo" class="brand-image img-circle elevation-3" src="dist/img/AdminLTELogo.png"
-                 style="opacity: .8">
-            <span class="brand-text font-weight-light">AdminLTE 3</span>
-        </a>
-
         <!-- Sidebar -->
         <div class="sidebar">
             <!-- Sidebar user panel (optional) -->
@@ -56,7 +50,6 @@
                 <div class="info" id="name-admin">
                 </div>
             </div>
-
             <!-- SidebarSearch Form -->
             <!-- Sidebar Menu -->
             <nav class="mt-2">
@@ -73,19 +66,20 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/case4_FE/product-category/pages/category/category.html">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>QUản lý danh mục</p>
+                                    <p>Quản lý danh mục</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/case4_FE/product-category/pages/bill/category.html">
+                                <a class="nav-link" href="/case4_FE/product-category/pages/bill/bill.html">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Dashboard v3</p>
+                                    <p>Quản lý Bill</p>
                                 </a>
                             </li>
                         </ul>
                     </li>
                 </ul>
             </nav>
+            <button class="btn btn-danger " id="next" onclick="doLogout()">Đăng xuất</button>
             <!-- /.sidebar-menu -->
         </div>
         <!-- /.sidebar -->
@@ -131,6 +125,6 @@
 <script src="dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="dist/js/pages/dashboard.js"></script>
-
+<script src="../login/login.js"></script>
 </body>
 </html>
